<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <CheckBox
        android:id="@+id/thesis_change_rights_write_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/stix"
        android:text="@string/thesis_change_rights_write_checkbox"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="15dp"
        android:textColor="@color/textPrimary" />

    <LinearLayout
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/thesis_change_rights_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.ButtonBar"
            android:text="@string/thesis_change_rights_no"
            />

        <Button
            android:id="@+id/thesis_change_rights_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.ButtonBar"
            android:text="@string/thesis_change_rights_ok"
            />

    </LinearLayout>

</LinearLayout>