<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="vm"
            type="com.gedar0082.debater.viewmodel.LoginViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        tools:context=".view.LoginFragment">

        <TextView
            android:id="@+id/hint_emailAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/stix"
            android:text="@string/hint_emailAddress"
            android:textColor="@color/textPrimary"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="@font/stix"
            android:inputType="textEmailAddress"
            android:textColor="@color/textPrimary"
            android:textSize="18sp"
            android:text="@={vm.emailText}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:autofillHints="@string/editTextTextEmailAddress"
            android:hint="@string/editTextTextEmailAddress"
            />

        <TextView
            android:id="@+id/hint_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/stix"
            android:text="@string/hint_password"
            android:textColor="@color/textPrimary"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="@font/stix"
            android:inputType="textPassword"
            android:textColor="@color/textPrimary"
            android:textSize="18sp"
            android:text="@={vm.password}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.7"
            android:autofillHints="@string/editTextTextPassword"
            android:hint="@string/editTextTextPassword"/>

        <TextView
            android:id="@+id/text_access"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/stix"
            android:textSize="22sp"
            android:text="@={vm.diagnosticText}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.094" />

        <TextView
            android:id="@+id/hint_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/stix"
            android:text="@string/hint_username"
            android:textColor="@color/textPrimary"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="@font/stix"
            android:inputType="textPersonName"
            android:text="@={vm.nicknameText}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3"
            android:autofillHints="@string/editTextTextPersonName"
            android:hint="@string/editTextTextPersonName"/>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="100dp"
            android:layout_height="61dp"
            android:background="@drawable/btn_round"
            android:fontFamily="@font/stix"
            android:text="@string/btn_register"
            android:onClick="@{()->vm.registration()}"
            android:textColor="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.25"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.90" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="100dp"
            android:layout_height="61dp"
            android:background="@drawable/btn_round"
            android:fontFamily="@font/stix"
            android:text="@string/btn_login"
            android:onClick="@{()->vm.login()}"
            android:textColor="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.73"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.90" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>