<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="mViewmodel"
            type="com.gedar0082.debater.viewmodel.DebateViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/card_round"
        android:orientation="vertical">

        <TextView
            android:id="@+id/Dialog_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:fontFamily="@font/stix"
            android:gravity="center"
            android:text="@string/Dialog_text"
            android:textColor="@color/textPrimaryDark"
            android:textSize="28sp" />

        <EditText
            android:id="@+id/debate_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="4dp"
            android:autofillHints="Player 1"
            android:fontFamily="@font/stix"
            android:inputType="textCapSentences|textMultiLine"
            android:shadowColor="@color/colorAccent"
            android:textColor="@color/textPrimary"
            android:textColorHighlight="@color/textPrimary"
            android:hint="@string/debate_name"/>

        <EditText
            android:id="@+id/debate_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="16dp"
            android:autofillHints="Player 2"
            android:fontFamily="@font/stix"
            android:inputType="textCapSentences|textMultiLine"
            android:shadowColor="@color/colorAccent"
            android:textColor="@color/textPrimaryDark"
            android:hint="@string/debate_description"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/debate_rule">
        </Spinner>



    </LinearLayout>

    </ScrollView>
</layout>